--- a/render.yaml
+++ b/render.yaml
@@ -4,9 +4,8 @@ services:
     env: python
     plan: free
     branch: main
-    buildCommand: |
-      apt-get update && apt-get install -y tesseract-ocr && pip install -r requirements.txt
+    buildCommand: pip install -r requirements.txt
     startCommand: gunicorn app:app
     envVars:
       - key: PYTHON_VERSION
-        value: 3.10
+        value: 3.10.8
